@@ -1,4 +1,11 @@
 
+2004/05/02: Martin Preuss<martin@libchipcard.de>
+------------------------------------------------
+- added new functions to GWEN_Time:
+  - GWEN_Time_GetBrokenDownTime
+  - GWEN_Time_GetBrokenDownDate
+
+
 2004/05/01: Martin Preuss<martin@libchipcard.de>
 ------------------------------------------------
 - io/bufferedio: 
